Added README and updated form CSS.

--- a/client/App.css
+++ b/client/App.css
@@ -3,7 +3,7 @@
 }
 
 #header {
-    background: linear-gradient(160deg, #a9c1f9, #3a72f4, #4a5aef, #4a5aef);
+    background: linear-gradient(160deg, #714fea, #4a5aef);
     color: white;
 }
 
