--- a/client/Global.css
+++ b/client/Global.css
@@ -1,4 +1,5 @@
 @import '../public/css/buttons.css';
+@import '../public/css/text.css';
 
 body {
     padding: 0;
@@ -148,6 +149,12 @@ h1, h2, h3, h4, h5, h6 {
     padding-left: 50px;
 }
 
+.pb-0 {
+    padding-bottom: 0px;
+}
+.pb-10 {
+    padding-bottom: 10px;
+}
 .pb-20 {
     padding-bottom: 20px;
 }
