--- a/src/js/components/ControlPanel/ControlPanel.css
+++ b/src/js/components/ControlPanel/ControlPanel.css
@@ -1,7 +1,7 @@
 #control-panel-container {
-    flex: 5;
     padding: 20px;
-    border-right: dotted 1px #e3e3e3;
+    max-width: 600px;
+    margin: 0 auto;
 }
 
 #details {
